# Cmake_STM32_Blinky

./: CMakeLists.txt  Readme.md  toolchain.cmake
include/: system_config.h
src/: main.c  system_config.c
